--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,7 +13,8 @@
     "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "formik": "^2.2.9",
+    "@formspree/react": "^2.4.0",
+    "@sendgrid/mail": "^7.7.0",
     "framer-motion": "^6.5.1",
     "next": "12.3.1",
     "react": "18.2.0",
